# tobira-auth-callback-service

./: .gitignore  LICENSE  README.md  conf  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: tobira-auth.env
scripts/: run.sh  tobira-auth-callback-service.service  tobira-auth.service
src/: main.py
src/tobiraauth/: auth_callback.py  common.py  config.py  dummy_user_webservices.py  login_callback.py  server.py  utils.py
src/tobiraauth/conf/: tobira-auth.env
tests/tobiraauth/: test_auth_callback.py  test_dummy_user_webservices.py  test_login_callback.py
