[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tobira-auth-callback-service"
version = "0.1.0"
description = "This project is a sample implementation of the Tobira auth-callback and login-callback webservice."
authors = [
    {name = "Waldemar Smirnow", email = "smirnow@elan-ev.de"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Repository = "https://github.com/elan-ev/tobira-auth-callback-service"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tobiraauth.conf" = ["tobira-auth.env"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]